# libgp_mex

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindMATLAB.cmake
include/: libgpmex_interface.h  mex_utils.h
matlab/: addpath_libgp.m  libgp_mex.m  mex_libgp.m
src/: libgpmex_interface.cc
test/: run_libgp.m  timing.m
